# xtag

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  version.cmake
.github/workflows/: ci.yml
cli/: CMakeLists.txt
cli/src/: log.hpp  main.cpp
cli/src/app/: app.cpp  app.hpp
cli/src/command/: command.hpp  erase.cpp  erase.hpp  erase_tags.cpp  erase_tags.hpp  get_tags.cpp  get_tags.hpp  list.cpp  list.hpp  scan.cpp  scan.hpp  set.cpp  set.hpp  set_tags.cpp  set_tags.hpp
ext/: CMakeLists.txt  depzip.jsonc
gui/: CMakeLists.txt
gui/src/: log.hpp  main.cpp
gui/src/app/: app.cpp  app.hpp  controller.cpp  controller.hpp  entry_book.cpp  entry_book.hpp  entry_data.cpp  entry_data.hpp  file_browser.cpp  file_browser.hpp  file_list.cpp  file_list.hpp  main_menu.cpp  main_menu.hpp  main_window.cpp  main_window.hpp  object.cpp  object.hpp  scan_data.hpp  time.hpp
gui/src/service/: delta_time.hpp  services.hpp  shared_model.hpp  signal.hpp  signals.hpp
gui/src/ui/: action.hpp  controller.cpp  controller.hpp  dispatch.hpp  entry_book.cpp  entry_book.hpp  entry_data.cpp  entry_data.hpp  main_menu.cpp  main_menu.hpp  main_window.cpp  main_window.hpp  object.hpp  scan_data.hpp
gui/src/ui/impl/: controller.cpp  controller.hpp
gui/src/ui/modal/: loading.cpp  loading.hpp  modal.cpp  modal.hpp
gui/src/ui/widget/: entry_browser.cpp  entry_browser.hpp  file_browser.cpp  file_browser.hpp  im_input_text.hpp  list_filter.cpp  list_filter.hpp  scan_data.cpp  scan_data.hpp  tag_editor.cpp  tag_editor.hpp
lib/: CMakeLists.txt
lib/include/xtag/: file.hpp  format.hpp  formatter.hpp  instance.hpp  panic.hpp  query.hpp  result.hpp  string_pool.hpp  string_set.hpp  tag_storage.hpp  types.hpp  util.hpp  xattr.hpp  xtag.hpp
lib/src/: ads.cpp  build_version.hpp.in  xattr.cpp  xtag.cpp
lib/src/detail/: query_scanner.hpp  util.hpp
tests/: CMakeLists.txt  test_query_expression.cpp  test_query_scanner.cpp  test_scan_directory.cpp  test_scan_tagged.cpp  test_tag_dir.cpp  test_tag_serde.cpp  test_xattr.cpp
tests/common/: fixture.hpp  test_dir.cpp  test_dir.hpp
