project(${package_name}-gui)

add_executable(${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME} PRIVATE
  ${package_name}::${package_name}-lib
  clap::clap
  gvdi::gvdi
)

target_include_directories(${PROJECT_NAME} PRIVATE
  src
)

file(GLOB_RECURSE sources LIST_DIRECTORIES false "src/*.[hc]pp")
target_sources(${PROJECT_NAME} PRIVATE
  ${sources}
)

message(STATUS "[${PROJECT_NAME}] setting up install")
include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME})
